--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,14 @@ dependencies:
   recase: ^4.1.0
   archive: ^3.3.7
   process_run: ^0.12.5+2
-  mason_logger: ^0.2.7
+  mason_logger: ^0.2.8
   dart_style: ^2.3.2
+  version: ^3.0.2
 
 dev_dependencies:
   test: ^1.24.6
   lints: ^2.1.1
+  mocktail: ^1.0.0
 
 executables:
   stmr:
