feat: adiciona comando de push e sincronização automática - atualiza documentação para incluir instruções sobre o novo comando - remove auto pull do script post_push.dart para simplificar o fluxo de trabalho

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "dart test",
     "version:auto": "dart tool/auto_version.dart",
+    "push": "dart tool/push_and_sync.dart",
     "prepare": "husky"
   },
   "repository": {
