docs: atualiza documentação do pre-commit para refletir mudanças na verificação de qualidade - implementa análise rigorosa com dart analyze, bloqueando commits com qualquer issue - melhora mensagens de feedback para o usuário - ajusta configuração do GitHub Actions para usar PAT em vez de GITHUB_TOKEN

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PAT }}
         fetch-depth: 0
 
     - name: Setup Dart
@@ -43,7 +43,7 @@ jobs:
     - name: Create tag and release
       if: steps.tag_check.outputs.exists == 'false'
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PAT: ${{ secrets.PAT }}
       run: |
         VERSION=${{ steps.version.outputs.version }}
         
