--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  actions: read
+  pull-requests: read
+
 jobs:
   auto-release:
     runs-on: ubuntu-latest
@@ -13,7 +18,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        token: ${{ github.token }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         fetch-depth: 0
 
     - name: Setup Dart
@@ -43,7 +48,7 @@ jobs:
     - name: Create tag and release
       if: steps.tag_check.outputs.exists == 'false'
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         VERSION=${{ steps.version.outputs.version }}
         
